# eduplatform

./: .dockerignore  .env.example  .gitignore  DEPLOY_TRIGGER.md  Dockerfile  REDEPLOY.md  buildspec.yml  capacitor.config.json  package-lock.json  package.json  vercel.json
student-app-rust/: .gitignore  Cargo.toml  README.md  build.rs  mobile.toml
student-app-rust/.cargo/: config.toml
student-app-rust/android-wrapper/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
student-app-rust/android-wrapper/app/: build.gradle.kts  proguard-rules.pro
student-app-rust/android-wrapper/app/src/main/: AndroidManifest.xml
student-app-rust/android-wrapper/app/src/main/java/app/dreamkorea/smartclass/: DreamKoreaApp.kt  MainActivity.java  MainActivity.kt
student-app-rust/android-wrapper/app/src/main/java/app/dreamkorea/smartclass/api/: DreamKoreaApi.kt
student-app-rust/android-wrapper/app/src/main/java/app/dreamkorea/smartclass/data/: AppState.kt
student-app-rust/android-wrapper/app/src/main/java/app/dreamkorea/smartclass/ui/: ExamScreen.kt  LiveRoomScreen.kt  LoginScreen.kt  QuestionBankScreen.kt  Screens.kt  Settings.kt  (+2 more)
student-app-rust/android-wrapper/app/src/main/java/app/eduplatform/student/: MainActivity.kt
student-app-rust/android-wrapper/app/src/main/res/values/: strings.xml  themes.xml
student-app-rust/src/: api.rs  auth.rs  lib.rs  main.rs  models.rs  state.rs  strings.rs
student-app-rust/ui/: app.slint
student-app-rust/ui/components/: glass.slint  icon.slint
student-app-rust/ui/screens/: auth.slint  home.slint  learn.slint  profile.slint  qa.slint  test-result.slint  test-runner.slint  tests.slint
(+181 files in other folders)
