[package]
name = "eduplatform-student"
version = "0.1.0"
edition = "2021"
description = "EduPlatform Student — native mobile app for learning"
license = "MIT"
repository = "https://github.com/your-org/eduplatform"

[[bin]]
name = "eduplatform-student"
path = "src/main.rs"

[features]
default = ["desktop"]
# Desktop: winit window + skia (OpenGL) — best for Linux/macOS/Windows dev
desktop = ["slint/backend-winit", "slint/renderer-winit-skia-opengl"]
# Android: android-activity backend + software renderer (most reliable for cross-compile)
android = ["slint/backend-android-activity-05", "slint/renderer-software"]
# iOS: winit + femtovg (OpenGL ES) — skia has compile issues on iOS in 1.17
ios = ["slint/backend-winit", "slint/renderer-femtovg"]

[dependencies]
slint = { version = "1.7", default-features = false, features = ["std", "compat-1-2"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
url = "2"
time = { version = "0.3", features = ["serde", "formatting", "macros"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
